--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Bus Mall</title>
         <link href="reset.css" type="text/css" rel="stylesheet">
         <link href="style.css" type="text/css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
     </head>
 
 <body>
@@ -20,22 +21,8 @@
         </nav>
     </header>
 
-    <div id="resultSection">
-        <h2>Results</h2>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-    </div>
-
-    <div id="images">
+    <h2>Please Select Your Favorite Product</h2>
+    <!-- <div class="imagesContainer"> -->
 
        <form id="form">
             <fieldset>
@@ -52,17 +39,20 @@
                 <img id="image-three" src="" alt="" title=""/>
                     <!-- <input id="image3select" type="radio" name=""/> -->
              </fieldset>
-
-        <section id="button">
-        <button type="submit" name="submit-button">Submit</button>
-       </section>
         
        </form>
-    </div>
+    <!-- </div> -->
+
+
+    <div class="chartContainer">
+        <canvas id="myChart"></canvas>
+    </div>    
 
     <footer></footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <script src="app.js"></script>
+
+    
 
 </body>
 </html>
